--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>Smart Notes</title>
+	<link rel="stylesheet" href="css/bootstrap.css">
+  	<link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  	<link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="css/style.css" charset="utf-8">
 </head>
 <body>
 <script></script>
