--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/style.css" charset="utf-8">
 </head>
 <body>
-<script></script>
+<script type="text/javascript" src="js/libs/node_modules/angular/angular.js"></script>
+<script type="text/javascript" src="js/libs/node_modules/angular-route/angular-route.js"></script>
 </body>
 </html>
