--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="SmartNotes">
 <head>
 	<title>Smart Notes</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -8,7 +8,11 @@
 	<link rel="stylesheet" href="css/style.css" charset="utf-8">
 </head>
 <body>
+	<div class="jumbotron" ng-view>
+
+	</div>
 <script type="text/javascript" src="js/libs/node_modules/angular/angular.js"></script>
 <script type="text/javascript" src="js/libs/node_modules/angular-route/angular-route.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
