--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 	<div class="jumbotron" ng-view>
 
 	</div>
-<script type="text/javascript" src="js/libs/node_modules/angular/angular.js"></script>
-<script type="text/javascript" src="js/libs/node_modules/angular-route/angular-route.js"></script>
-<script src="js/app.js"></script>
+	<script src="js/libs/node_modules/angular/angular.js"></script>
+	<script src="js/libs/node_modules/angular-route/angular-route.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/controllers/authentication/LoginController.js"></script>
+	<script src="js/controllers/authentication/RegisterController.js"></script>
 </body>
 </html>
