Adding more style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css" charset="utf-8">
 </head>
 <body>
-	<div class="jumbotron" ng-view>
+	<div class="container jumbotron" ng-view>
 
 	</div>
 	<script src="js/libs/node_modules/angular/angular.js"></script>
