--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	<script src="js/libs/node_modules/angular/angular.js"></script>
 	<script src="js/libs/node_modules/angular-route/angular-route.js"></script>
 	<script src="js/app.js"></script>
+	<script src="//da189i1jfloii.cloudfront.net/js/kinvey-angular-1.6.8.min.js"></script>
 	<script src="js/controllers/authentication/LoginController.js"></script>
 	<script src="js/controllers/authentication/RegisterController.js"></script>
+	<script src="js/services/authenticationService.js"></script>
 </body>
 </html>
