Login and Register

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="//da189i1jfloii.cloudfront.net/js/kinvey-angular-1.6.8.min.js"></script>
 	<script src="js/controllers/authentication/LoginController.js"></script>
 	<script src="js/controllers/authentication/RegisterController.js"></script>
+	<script src="js/controllers/notes/NotesController.js"></script>
 	<script src="js/services/authenticationService.js"></script>
 </body>
 </html>
