Added some templates

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
 	<script src="js/controllers/authentication/RegisterController.js"></script>
 	<script src="js/controllers/notes/NotesController.js"></script>
 	<script src="js/services/authenticationService.js"></script>
+	<script src="js/controllers/notes/ViewNoteController.js"></script>
+	<script src="js/controllers/notes/AddNoteController.js"></script>
 </body>
 </html>
